--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,8 +9,7 @@
         android:id="@+id/image_icon"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/elon_musk"
-        android:scaleType="centerCrop"
+        android:src="@drawable/ic_baseline_account_circle_24"
         app:layout_constraintBottom_toTopOf="@+id/et_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
