--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="material_white">#F9FCFB</color>
+    <color name="material_yellow">#FDD835</color>
+    <color name="md_blue_200">#3F55DD</color>
 </resources>
