--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:menu="@menu/menu"
     tools:context=".ui.home.HomeFragment">
     
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -13,8 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="32dp"
-        android:src="@drawable/ic_baseline_add_24"
-        />
+        android:src="@drawable/ic_baseline_add_24" />
     
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_home"
