--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text="@string/title"
         android:textColor="@color/black"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -20,7 +20,7 @@
         android:id="@+id/item_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:text="@string/description"
         android:textSize="22sp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/item_title"
