--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="material_white">#F9FCFB</color>
     <color name="material_yellow">#FDD835</color>
     <color name="md_blue_200">#3F55DD</color>
+    <color name="gray">#777777</color>
 </resources>
