--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,4 +26,18 @@
         app:layout_constraintTop_toBottomOf="@id/et_profile"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textAlignment="center" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnLogout"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@color/md_blue_200"
+        android:paddingVertical="20dp"
+        android:text="Exit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_profile"
+        app:cornerRadius="60dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
